<resources>
    <string name="app_name">MoviesManager</string>
    <string name="filme">Filme:</string>
    <string name="lan_amento">Lançamento:</string>
    <string name="nota">Nota:</string>
    <string name="dura_o">Duração(min):</string>
    <string name="nome">Nome</string>
    <string name="ano_de_lan_amento">Ano de lançamento</string>
    <string name="estudio_opcional">Estudio: (Opcional)</string>
    <string name="produtora_opcional">Produtora: (Opcional)</string>
    <string name="duracao">Duração(min)</string>
    <string name="j_assisti">Já assisti</string>
    <string name="nota_">Nota</string>
    <string name="salvar_filme">Salvar Filme</string>
    <string name="adicionar_filme">Adicionar Filme</string>
    <string name="ordenar_por_nome">Nome</string>
    <string name="ordenar_por_nota">Nota</string>

    <string-array name="genero">
        <item>Ação</item>
        <item>Aventura</item>
        <item>Comédia</item>
        <item>Comédia romântica</item>
        <item>Drama</item>
        <item>Ficção Científica</item>
        <item>Gospel</item>
        <item>Romance</item>
        <item>Suspense</item>
        <item>Terror</item>
    </string-array>
</resources>