<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/addMovie"
        android:icon="@drawable/ic_action_add_movie"
        android:title="@string/adicionar_filme"
        app:showAsAction="never"/>


    <item android:id="@+id/ordenacao"
        android:title="Ordenar por" >
        <menu>
            <item
                android:id="@+id/ordenarNome"
                android:icon="@drawable/ic_action_add_movie"
                android:title="@string/ordenar_por_nome"
                app:showAsAction="never"/>

            <item
                android:id="@+id/ordenarNota"
                android:icon="@drawable/ic_action_add_movie"
                android:title="@string/ordenar_por_nota"
                app:showAsAction="never"/>
        </menu>
    </item>

</menu>