<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/nomeTileMv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filme"
        android:textSize="17sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/duracaoTileMv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dura_o"
        android:textSize="17sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/notaTileMv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nota"
        android:textSize="17sp"
        android:textColor="@color/black"/>
</LinearLayout>
